# lrsh

./: .gitattributes  .gitignore  .gitlab-ci.yml  .profile.lua  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  Makefile  README.md
doc/: PROTOCOL.md  build.md  environment.md  palantir.man  palantir.md  protocol.md
res/: palantir.man
src/: Makefile  palantir.c  palantir.h  palantir.lua
src/lib/: args.c  args.h  crc.c  crc.h  dict.h  lua.c  lua.h  net.c  net.h  os.c  os.h  os_posix.c  os_winnt.c  readline.c  readline.h  sys.c  sys.h
src/lua/: lua.c  lua.h
src/tools/: xxd.lua
test/: test.sh
